--- a/myjokeactivity/src/main/res/layout/fragment_my_joke.xml
+++ b/myjokeactivity/src/main/res/layout/fragment_my_joke.xml
@@ -6,18 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.havistudio.builditbigger.MainActivityFragment"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.havistudio.myjokeactivity.MyJokeActivityFragment"
+    tools:showIn="@layout/activity_my_joke">
 
-    <Button
-        android:id="@+id/show_joke"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/show_joke_button"/>
 
-    <TextView
-        android:id="@+id/joke_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </RelativeLayout>
